--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.2.0
 attrs==19.3.0
+blinker==1.4
 Click==7.0
 Flask==1.1.1
 Flask-Login==0.4.1
@@ -12,6 +13,7 @@ Mako==1.1.0
 MarkupSafe==1.1.1
 more-itertools==8.2.0
 packaging==20.1
+pkg-resources==0.0.0
 pluggy==0.13.1
 psycopg2==2.8.3
 py==1.8.1
