--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.1.1
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
+googlemaps==4.4.1
 importlib-metadata==1.5.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
