--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
       - FLASK_APP=masterclasses.py
       - SECRET_KEY=secret-dev-key
       - ENV=dev
+    env_file: .flaskenv
     ports:
       - "5000:5000"
 
