--- a/requirements.txt
+++ b/requirements.txt
@@ -24,6 +24,7 @@ python-dotenv==0.10.3
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.8
+SQLAlchemy-serializer==1.3.4.4
 wcwidth==0.1.8
 Werkzeug==0.15.5
 zipp==2.1.0
