--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,44 @@
 alembic==1.2.0
+appdirs==1.4.4
 attrs==19.3.0
+black==20.8b1
 blinker==1.4
-Click==7.0
+certifi==2020.12.5
+chardet==4.0.0
+click==7.1.2
 Flask==1.1.1
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
 googlemaps==4.4.1
+idna==2.10
 importlib-metadata==1.5.0
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.1.0
 MarkupSafe==1.1.1
 more-itertools==8.2.0
+mypy-extensions==0.4.3
 packaging==20.1
+pathspec==0.8.1
 pluggy==0.13.1
 psycopg2==2.8.3
+psycopg2-binary==2.8.6
 py==1.8.1
 pyparsing==2.4.6
 pytest==5.3.5
 python-dateutil==2.8.0
 python-dotenv==0.10.3
 python-editor==1.0.4
+regex==2020.11.13
+requests==2.25.1
 six==1.12.0
 SQLAlchemy==1.3.8
 SQLAlchemy-serializer==1.3.4.4
+toml==0.10.2
+typed-ast==1.4.2
+typing-extensions==3.7.4.3
+urllib3==1.26.2
 wcwidth==0.1.8
 Werkzeug==0.15.5
 zipp==2.1.0
